log
Thu 04 May 2023 04:41:13 PM UTC: 
 tests:  0|5
total_score: 0/70
e5c5823
Thu 04 May 2023 04:44:49 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
77f43ba
Sun 07 May 2023 03:40:25 AM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
aa06f2c
Sun 07 May 2023 03:49:04 AM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
76f8428
Sun 07 May 2023 03:53:18 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:90:25: error: statement with no effect [-Werror=unused-value]
   90 |           n->sudo[i][j] == num;
      |           ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9730e29
